reinstall button in place

--- a/manifest.json
+++ b/manifest.json
@@ -5,8 +5,8 @@
   "forceUpdate": false,
   "behavior": "application",
   "version": "0.1",
-  "title": "Wordpress",
-  "name": "Wordpress",
+  "title": "WordPress",
+  "name": "WordPress",
   "identifier": "com.koding.apps.wordpress",
   "path": "~/Applications/Wordpress.kdapp",
   "homepage": "glang.kd.io/wordpress",
